fix: swagger docs updated
